tests/declare_class/declare_class.exp

[LIB] test.js: Library type error:
[LIB] test.js: inconsistent use of library definitions
[LIB] test.js:8:10,15: string
This type is incompatible with
[LIB] test.js:2:10,15: number

declare_class.js:6:1,3: assignment of property x
Error:
declare_class.js:6:7,8: string
This type is incompatible with
declare_class.js:2:15,20: number

declare_class.js:7:1,9: call of method foo
Error:
declare_class.js:7:7,8: string
This type is incompatible with
declare_class.js:3:19,24: number

Found 3 errors
